bk_ida/gccida/c3/declare_weak
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/declare_weak/src/varasm.c:5552:25: error: use of undeclared identifier 'off_73AD60'
error_with_decl( decl, &off_73AD60[4]); 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/declare_weak/src/obj/varasm.o] Error 1
